chore: JDK17 adaptation - remove pattern-matching switch and List.getFirst() from batch 2 commits
DateUtils.dateToEpochDays used a JDK21 pattern-matching switch with
'case null ->'; rewritten as an if/else instanceof chain.
LSMVectorIndexBruteForceScanTest and UnwindStepAliasingTest called
List.getFirst() (JDK21-only); replaced with get(0). Not part of any
upstream commit; required to keep the java17 branch compiling on Java 17.